// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AdminBarWidgets should not render the Activate Analytics CTA when the Analytics module is not available 1`] = `
<div>
  <div
    class="mdc-layout-grid__inner"
  >
    <div
      class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-2-tablet"
    >
      <div
        class="googlesitekit-data-block overview-total-impressions googlesitekit-data-block--default"
        tabindex="-1"
      >
        <div
          class="googlesitekit-data-block__title-datapoint-wrapper"
        >
          <h3
            class=" googlesitekit-subheading-1 googlesitekit-data-block__title "
          >
            Total Impressions
          </h3>
          <div
            class="googlesitekit-data-block__datapoint"
          >
            4.6K
          </div>
        </div>
        <div
          class="googlesitekit-data-block__change-source-wrapper"
        >
          <div
            class="googlesitekit-data-block__change googlesitekit-data-block__change--no-change"
          >
            <span
              class="googlesitekit-data-block__value"
            >
              0%
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-2-tablet"
    >
      <div
        class="googlesitekit-data-block overview-total-clicks googlesitekit-data-block--default"
        tabindex="-1"
      >
        <div
          class="googlesitekit-data-block__title-datapoint-wrapper"
        >
          <h3
            class=" googlesitekit-subheading-1 googlesitekit-data-block__title "
          >
            Total Clicks
          </h3>
          <div
            class="googlesitekit-data-block__datapoint"
          >
            123
          </div>
        </div>
        <div
          class="googlesitekit-data-block__change-source-wrapper"
        >
          <div
            class="googlesitekit-data-block__change googlesitekit-data-block__change--no-change"
          >
            <span
              class="googlesitekit-data-block__value"
            >
              0%
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-4-tablet"
    />
  </div>
</div>
`;

exports[`AdminBarWidgets should render the Admin Bar Widgets, including the Activate Analytics CTA 1`] = `
<div>
  <div
    class="mdc-layout-grid__inner"
  >
    <div
      class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-2-tablet"
    >
      <div
        class="googlesitekit-data-block overview-total-impressions googlesitekit-data-block--default"
        tabindex="-1"
      >
        <div
          class="googlesitekit-data-block__title-datapoint-wrapper"
        >
          <h3
            class=" googlesitekit-subheading-1 googlesitekit-data-block__title "
          >
            Total Impressions
          </h3>
          <div
            class="googlesitekit-data-block__datapoint"
          >
            4.6K
          </div>
        </div>
        <div
          class="googlesitekit-data-block__change-source-wrapper"
        >
          <div
            class="googlesitekit-data-block__change googlesitekit-data-block__change--no-change"
          >
            <span
              class="googlesitekit-data-block__value"
            >
              0%
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-2-tablet"
    >
      <div
        class="googlesitekit-data-block overview-total-clicks googlesitekit-data-block--default"
        tabindex="-1"
      >
        <div
          class="googlesitekit-data-block__title-datapoint-wrapper"
        >
          <h3
            class=" googlesitekit-subheading-1 googlesitekit-data-block__title "
          >
            Total Clicks
          </h3>
          <div
            class="googlesitekit-data-block__datapoint"
          >
            123
          </div>
        </div>
        <div
          class="googlesitekit-data-block__change-source-wrapper"
        >
          <div
            class="googlesitekit-data-block__change googlesitekit-data-block__change--no-change"
          >
            <span
              class="googlesitekit-data-block__value"
            >
              0%
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-4-tablet"
    >
      <div
        class="googlesitekit-cta"
      >
        <h3
          class="googlesitekit-cta__title"
        >
          Learn more about what visitors do on your site
        </h3>
        <p
          class="googlesitekit-cta__description"
        >
          Connect with Google Analytics to see unique visitors, goal completions, top pages and more
        </p>
        <button
          class="googlesitekit-cta-link googlesitekit-cta-link--arrow"
        >
          Set up Analytics
        </button>
      </div>
    </div>
  </div>
</div>
`;
